--- a/css/index.css
+++ b/css/index.css
@@ -32,7 +32,7 @@ header, .experience {
 	padding: 10px;
 }
 
-@media screen and (max-width: 825px) and () {
+@media screen and (max-width: 825px) {
 header {
 	border: none;
 	padding: 0px;
@@ -42,17 +42,12 @@ section .right {
 	float: right;
 }
 
-section .left {
-	float: left;
-}
-
 .right {
 	width: 50%;
 	float: none;
 }
 
 .left {
-	float: none;
 	width: 50%;
 }
 
